--- a/systemtest/approvals/TestIntake/MinimalEvents.approved.json
+++ b/systemtest/approvals/TestIntake/MinimalEvents.approved.json
@@ -1,7 +1,7 @@
 {
     "events": [
         {
-            "@timestamp": "2019-01-09T21:40:53.000Z",
+            "@timestamp": "dynamic",
             "agent": {
                 "name": "elastic-node",
                 "version": "3.14.0"
@@ -11,10 +11,15 @@
             "data_stream.type": "logs",
             "error": {
                 "grouping_key": "0b9cba09845a097a271c6beb4c6207f3",
+                "grouping_name": "error log message",
                 "id": "abcdef0123456789",
                 "log": {
                     "message": "error log message"
                 }
+            },
+            "event": {
+                "agent_id_status": "missing",
+                "ingested": "dynamic"
             },
             "host": {
                 "ip": [
@@ -35,11 +40,11 @@
                 "name": "1234_service-12a3"
             },
             "timestamp": {
-                "us": 1547070053000000
+                "us": "dynamic"
             }
         },
         {
-            "@timestamp": "2019-01-09T21:40:53.000Z",
+            "@timestamp": "dynamic",
             "agent": {
                 "name": "elastic-node",
                 "version": "3.14.0"
@@ -54,7 +59,12 @@
                     }
                 ],
                 "grouping_key": "3a1fb5609458fbb132b44d8fc7cde104",
+                "grouping_name": "error exception message",
                 "id": "abcdef0123456790"
+            },
+            "event": {
+                "agent_id_status": "missing",
+                "ingested": "dynamic"
             },
             "host": {
                 "ip": [
@@ -75,11 +85,11 @@
                 "name": "1234_service-12a3"
             },
             "timestamp": {
-                "us": 1547070053000000
+                "us": "dynamic"
             }
         },
         {
-            "@timestamp": "2019-01-09T21:40:53.000Z",
+            "@timestamp": "dynamic",
             "agent": {
                 "name": "elastic-node",
                 "version": "3.14.0"
@@ -94,7 +104,12 @@
                     }
                 ],
                 "grouping_key": "fa405fa2bd848dab17207e7b544d9ad4",
+                "grouping_name": null,
                 "id": "abcdef0123456791"
+            },
+            "event": {
+                "agent_id_status": "missing",
+                "ingested": "dynamic"
             },
             "host": {
                 "ip": [
@@ -114,11 +129,49 @@
                 "name": "1234_service-12a3"
             },
             "timestamp": {
-                "us": 1547070053000000
+                "us": "dynamic"
             }
         },
         {
-            "@timestamp": "2019-01-09T21:40:53.000Z",
+            "@timestamp": "dynamic",
+            "a": 3.2,
+            "agent": {
+                "name": "elastic-node",
+                "version": "3.14.0"
+            },
+            "data_stream": {
+                "dataset": "apm.app.1234_service_12a3",
+                "namespace": "default",
+                "type": "metrics"
+            },
+            "ecs": {
+                "version": "dynamic"
+            },
+            "event": {
+                "agent_id_status": "missing",
+                "ingested": "dynamic"
+            },
+            "host": {
+                "ip": "127.0.0.1"
+            },
+            "metricset": {
+                "name": "app"
+            },
+            "observer": {
+                "hostname": "dynamic",
+                "type": "apm-server",
+                "version": "dynamic"
+            },
+            "processor": {
+                "event": "metric",
+                "name": "metric"
+            },
+            "service": {
+                "name": "1234_service-12a3"
+            }
+        },
+        {
+            "@timestamp": "dynamic",
             "agent": {
                 "name": "elastic-node",
                 "version": "3.14.0"
@@ -127,13 +180,9 @@
             "data_stream.namespace": "default",
             "data_stream.type": "traces",
             "event": {
-                "duration": 3564298,
+                "agent_id_status": "missing",
+                "ingested": "dynamic",
                 "outcome": "unknown"
-            },
-            "host": {
-                "ip": [
-                    "127.0.0.1"
-                ]
             },
             "observer": {
                 "hostname": "dynamic",
@@ -151,19 +200,22 @@
                 "name": "1234_service-12a3"
             },
             "span": {
+                "duration": {
+                    "us": 3564
+                },
                 "id": "0123456a89012345",
                 "name": "GET /api/types",
                 "type": "request"
             },
             "timestamp": {
-                "us": 1547070053000000
+                "us": "dynamic"
             },
             "trace": {
                 "id": "0123456789abcdef0123456789abcdef"
             }
         },
         {
-            "@timestamp": "2018-08-30T18:53:27.154Z",
+            "@timestamp": "dynamic",
             "agent": {
                 "name": "elastic-node",
                 "version": "3.14.0"
@@ -172,13 +224,9 @@
             "data_stream.namespace": "default",
             "data_stream.type": "traces",
             "event": {
-                "duration": 3564298,
+                "agent_id_status": "missing",
+                "ingested": "dynamic",
                 "outcome": "unknown"
-            },
-            "host": {
-                "ip": [
-                    "127.0.0.1"
-                ]
             },
             "observer": {
                 "hostname": "dynamic",
@@ -196,19 +244,22 @@
                 "name": "1234_service-12a3"
             },
             "span": {
+                "duration": {
+                    "us": 3564
+                },
                 "id": "0123456a89012345",
                 "name": "GET /api/types",
                 "type": "request"
             },
             "timestamp": {
-                "us": 1535655207154000
+                "us": "dynamic"
             },
             "trace": {
                 "id": "0123456789abcdef0123456789abcdef"
             }
         },
         {
-            "@timestamp": "2019-01-09T21:40:53.000Z",
+            "@timestamp": "dynamic",
             "agent": {
                 "name": "elastic-node",
                 "version": "3.14.0"
@@ -217,7 +268,8 @@
             "data_stream.namespace": "default",
             "data_stream.type": "traces",
             "event": {
-                "duration": 32592981,
+                "agent_id_status": "missing",
+                "ingested": "dynamic",
                 "outcome": "unknown"
             },
             "host": {
@@ -238,12 +290,15 @@
                 "name": "1234_service-12a3"
             },
             "timestamp": {
-                "us": 1547070053000000
+                "us": "dynamic"
             },
             "trace": {
                 "id": "01234567890123456789abcdefabcdef"
             },
             "transaction": {
+                "duration": {
+                    "us": 32592
+                },
                 "id": "abcdef1478523690",
                 "representative_count": 1,
                 "sampled": true,
@@ -251,38 +306,6 @@
                     "started": 0
                 },
                 "type": "request"
-            }
-        },
-        {
-            "@timestamp": "2017-05-30T18:53:42.281Z",
-            "_metric_descriptions": {
-                "a": {}
-            },
-            "a": 3.2,
-            "agent": {
-                "name": "elastic-node",
-                "version": "3.14.0"
-            },
-            "data_stream.dataset": "apm.app.1234_service_12a3",
-            "data_stream.namespace": "default",
-            "data_stream.type": "metrics",
-            "host": {
-                "ip": [
-                    "127.0.0.1"
-                ]
-            },
-            "metricset.name": "app",
-            "observer": {
-                "hostname": "dynamic",
-                "type": "apm-server",
-                "version": "dynamic"
-            },
-            "processor": {
-                "event": "metric",
-                "name": "metric"
-            },
-            "service": {
-                "name": "1234_service-12a3"
             }
         }
     ]
